--- a/.github/workflows/php-tests.yml
+++ b/.github/workflows/php-tests.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Setup Just
+        uses: extractions/setup-just@v1
+
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
@@ -35,12 +38,12 @@ jobs:
         run: composer update
 
       - name: Run PHPunit
-        run: phpunit --configuration tests/phpunit.xml --coverage-clover=coverage.xml
+        run: just phpunit
 
       - name: Collect code coverage
         uses: codecov/codecov-action@v1
         with:
-          files: ./coverage.xml
+          files: ./build/logs/clover.xml
 
   phpcs:
     runs-on: ubuntu-latest
@@ -50,13 +53,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Setup Just
+        uses: extractions/setup-just@v1
+
       - name: Codestyle checkout
         uses: actions/checkout@v2
         with:
             repository: 'M2Mobi/lunr-coding-standard'
 
             # Relative path under $GITHUB_WORKSPACE to place the repository
-            path: 'codestyle'
+            path: 'lunr-coding-standard'
 
       - name: Setup PHPCS
         uses: shivammathur/setup-php@v2
@@ -65,7 +71,10 @@ jobs:
           tools: cs2pr, phpcs
 
       - name: Run PHPCS
-        run: phpcs -q --report=checkstyle src --standard=$GITHUB_WORKSPACE/codestyle/Lunr | cs2pr
+        run: just phpcs lunr-coding-standard/Lunr
+
+      - name: Process results
+        run: cs2pr build/logs/checkstyle.xml
 
   phpstan:
     runs-on: ubuntu-latest
@@ -74,6 +83,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Setup Just
+        uses: extractions/setup-just@v1
 
       - name: Setup PHPStan
         uses: shivammathur/setup-php@v2
@@ -86,4 +98,4 @@ jobs:
         run: composer update
 
       - name: Run PHPStan
-        run: phpstan analyze src -l6 --configuration tests/phpstan.neon.dist
+        run: just phpstan
