--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,13 @@
   "type": "library",
   "license": "MIT",
   "require": {
-    "psr/log": "~1.1",
     "php": ">=7.4",
     "ext-uopz": ">=6.1"
   },
   "require-dev": {
     "phpunit/phpunit": ">=8.5 <9.6",
-    "ext-xdebug": ">=3.0"
+    "ext-xdebug": ">=3.0",
+    "psr/log": ">=1.1"
   },
   "config": {
     "optimize-autoloader": true
