--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,7 @@
 # https://EditorConfig.org
+# SPDX-FileCopyrightText: Copyright 2021 M2mobi B.V., Amsterdam, The Netherlands
+# SPDX-FileCopyrightText: Copyright 2022 Move Agency Group B.V., Zwolle, The Netherlands
+# SPDX-License-Identifier: MIT
 
 # top-most EditorConfig file
 root = true
