--- a/.reviewboardrc
+++ b/.reviewboardrc
@@ -1,4 +1,8 @@
 # ReviewBoard Configuration for Lunr.Halo
+#
+# SPDX-FileCopyrightText: Copyright 2011 M2mobi B.V., Amsterdam, The Netherlands
+# SPDX-FileCopyrightText: Copyright 2022 Move Agency Group B.V., Zwolle, The Netherlands
+# SPDX-License-Identifier: MIT
 
 # Repository name
 REPOSITORY = "Lunr.Halo"
